--- a/conversor/src/main/java/com/alberttlee/conversor/gui/CurrencyGui.form
+++ b/conversor/src/main/java/com/alberttlee/conversor/gui/CurrencyGui.form
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.alberttlee.conversor.gui.CurrencyGui">
   <grid id="27dc6" binding="currencyPanel" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="30" right="0"/>
+    <margin top="0" left="0" bottom="50" right="0"/>
     <constraints>
       <xy x="20" y="20" width="841" height="462"/>
     </constraints>
-    <properties>
-      <preferredSize width="800" height="500"/>
-    </properties>
+    <properties/>
     <border type="none"/>
     <children>
       <component id="648b5" class="javax.swing.JLabel">
@@ -16,11 +14,12 @@
         </constraints>
         <properties>
           <font size="48"/>
-          <text value="Currency"/>
+          <foreground color="-12581618"/>
+          <text value="Currency Converter"/>
         </properties>
       </component>
       <grid id="89bef" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="40" bottom="0" right="0"/>
+        <margin top="0" left="50" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -33,14 +32,9 @@
             </constraints>
             <properties>
               <font size="20"/>
+              <foreground color="-10877426"/>
               <text value="From:"/>
             </properties>
-          </component>
-          <component id="52b4c" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
           </component>
           <component id="ae303" class="javax.swing.JLabel">
             <constraints>
@@ -48,21 +42,40 @@
             </constraints>
             <properties>
               <font size="20"/>
+              <foreground color="-10877426"/>
               <text value="To:"/>
             </properties>
           </component>
-          <component id="de03b" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+          <component id="de03b" class="javax.swing.JComboBox" binding="toJcombo">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="9" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="40" height="40"/>
+              </grid>
             </constraints>
             <properties>
+              <font size="14"/>
               <model/>
+            </properties>
+          </component>
+          <component id="52b4c" class="javax.swing.JComboBox" binding="fromJcombo">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="-1" height="40"/>
+              </grid>
+            </constraints>
+            <properties>
+              <autoscrolls value="false"/>
+              <font size="14"/>
+              <inheritsPopupMenu value="false"/>
+              <lightWeightPopupEnabled value="true"/>
+              <model/>
+              <opaque value="true"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="c6210" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="40" bottom="0" right="0"/>
+      <grid id="c6210" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="40" bottom="0" right="40"/>
         <constraints>
           <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -71,33 +84,40 @@
         <children>
           <component id="46f5d" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font size="20"/>
+              <foreground color="-10877426"/>
               <text value="Amount:"/>
             </properties>
           </component>
-          <component id="35fe4" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="35fe4" class="javax.swing.JTextField" binding="amountTxt">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="40"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <font size="18"/>
+              <foreground color="-16777216"/>
+            </properties>
           </component>
-          <component id="96647" class="javax.swing.JLabel">
+          <component id="d9558" class="javax.swing.JButton" binding="btnConverter">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="5" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="300" height="40"/>
+              </grid>
             </constraints>
             <properties>
-              <font size="20"/>
-              <text value="Salida:"/>
+              <font size="14"/>
+              <foreground color="-16215789"/>
+              <text value="Convert"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="f1b7d" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f1b7d" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -107,19 +127,41 @@
         <children>
           <hspacer id="8ac00">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
           <hspacer id="442c2">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
           <vspacer id="d6cd3">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
+          <component id="ef1bd" class="javax.swing.JLabel" binding="txtOut">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <enabled value="false"/>
+              <font size="28"/>
+              <horizontalAlignment value="0"/>
+              <text value="-"/>
+            </properties>
+          </component>
+          <component id="f0c63" class="javax.swing.JButton" binding="btnClear">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="200" height="30"/>
+              </grid>
+            </constraints>
+            <properties>
+              <focusPainted value="false"/>
+              <text value="Clear"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <vspacer id="1c692">
@@ -127,11 +169,12 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="836b5" class="javax.swing.JButton" binding="backButton" default-binding="true">
+      <component id="836b5" class="javax.swing.JButton" binding="btnBack">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <focusPainted value="false"/>
           <foreground color="-4511449"/>
           <text value="Back"/>
         </properties>
