--- a/conversor/src/main/java/com/alberttlee/conversor/gui/MainGui.form
+++ b/conversor/src/main/java/com/alberttlee/conversor/gui/MainGui.form
@@ -1,37 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.alberttlee.conversor.gui.MainGui">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="20" left="40" bottom="20" right="40"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="521" height="400"/>
     </constraints>
-    <properties>
-      <preferredSize width="800" height="600"/>
-    </properties>
+    <properties/>
     <border type="none"/>
     <children>
-      <component id="5934c" class="javax.swing.JLabel">
+      <component id="5934c" class="javax.swing.JLabel" binding="conversorLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font size="48"/>
+          <font name="Arial" size="72"/>
+          <foreground color="-12581618"/>
           <text value="Conversor"/>
         </properties>
       </component>
-      <component id="ae4d2" class="javax.swing.JButton" binding="currencyButton" default-binding="true">
+      <component id="9ba4" class="javax.swing.JButton" binding="btnTemperature">
         <constraints>
-          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="300" height="40"/>
+          </grid>
         </constraints>
         <properties>
-          <text value="Currency"/>
-        </properties>
-      </component>
-      <component id="9ba4" class="javax.swing.JButton" binding="temperatureButton" default-binding="true">
-        <constraints>
-          <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
+          <font name="Arial" size="18"/>
           <text value="Temperature"/>
         </properties>
       </component>
@@ -40,7 +34,22 @@
           <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Created by Albertt ❤"/>
+        </properties>
+      </component>
+      <component id="ae4d2" class="javax.swing.JButton" binding="btnCurrency">
+        <constraints>
+          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="300" height="40"/>
+          </grid>
+        </constraints>
+        <properties>
+          <borderPainted value="true"/>
+          <contentAreaFilled value="true"/>
+          <defaultCapable value="true"/>
+          <focusPainted value="false"/>
+          <font name="Arial" size="18"/>
+          <text value="Currency"/>
         </properties>
       </component>
     </children>
