--- a/conversor/src/main/java/com/alberttlee/conversor/gui/TemperatureGui.form
+++ b/conversor/src/main/java/com/alberttlee/conversor/gui/TemperatureGui.form
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.alberttlee.conversor.gui.TemperatureGui">
-  <grid id="27dc6" binding="temperatureGui" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="30" right="0"/>
+  <grid id="27dc6" binding="temperatureGui" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="0" left="0" bottom="50" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="541" height="400"/>
+      <xy x="20" y="20" width="605" height="400"/>
     </constraints>
-    <properties>
-      <preferredSize width="800" height="500"/>
-    </properties>
+    <properties/>
     <border type="none"/>
     <children>
       <component id="c2c0f" class="javax.swing.JLabel">
@@ -16,7 +14,8 @@
         </constraints>
         <properties>
           <font size="48"/>
-          <text value="Temperature"/>
+          <foreground color="-12581618"/>
+          <text value="Temperature Converter"/>
         </properties>
       </component>
       <grid id="f2c83" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -27,11 +26,18 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="a6b50" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+          <component id="a6b50" class="javax.swing.JComboBox" binding="fromJcombo">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="40" height="40"/>
+              </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+              <enabled value="true"/>
+              <font size="14"/>
+              <model/>
+            </properties>
           </component>
           <component id="68857" class="javax.swing.JLabel">
             <constraints>
@@ -39,14 +45,20 @@
             </constraints>
             <properties>
               <font size="20"/>
+              <foreground color="-10877426"/>
               <text value="To:"/>
             </properties>
           </component>
-          <component id="bde10" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+          <component id="bde10" class="javax.swing.JComboBox" binding="toJcombo">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="1" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="40" height="40"/>
+              </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <font size="14"/>
+              <model/>
+            </properties>
           </component>
           <component id="4ac2b" class="javax.swing.JLabel">
             <constraints>
@@ -54,13 +66,14 @@
             </constraints>
             <properties>
               <font size="20"/>
+              <foreground color="-10877426"/>
               <text value="From:"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="65173" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="40" bottom="0" right="0"/>
+      <grid id="65173" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="40" bottom="0" right="40"/>
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -69,40 +82,77 @@
         <children>
           <component id="ebeb9" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font size="20"/>
+              <foreground color="-10877426"/>
               <text value="Degrees:"/>
             </properties>
           </component>
-          <component id="1b2d4" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="1b2d4" class="javax.swing.JTextField" binding="degreesTxt">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="40"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <font size="18"/>
+              <text value=""/>
+            </properties>
           </component>
-          <component id="560ef" class="javax.swing.JLabel">
+          <component id="4971d" class="javax.swing.JButton" binding="btnConverter">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="300" height="40"/>
+              </grid>
             </constraints>
             <properties>
-              <font size="20"/>
-              <text value="salida"/>
+              <focusPainted value="false"/>
+              <font size="14"/>
+              <foreground color="-16215789"/>
+              <hideActionText value="false"/>
+              <horizontalTextPosition value="11"/>
+              <text value="Convert"/>
             </properties>
+            <clientProperties>
+              <hideActionText class="java.lang.Boolean" value="false"/>
+            </clientProperties>
           </component>
         </children>
       </grid>
-      <component id="314b5" class="javax.swing.JButton" binding="backButton" default-binding="true">
+      <component id="314b5" class="javax.swing.JButton" binding="btnBack">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="50" height="-1"/>
+          </grid>
         </constraints>
         <properties>
+          <focusPainted value="false"/>
           <foreground color="-4511449"/>
           <hideActionText value="false"/>
           <text value="Back"/>
+        </properties>
+      </component>
+      <component id="bf958" class="javax.swing.JLabel" binding="txtOut">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="28"/>
+          <text value="-"/>
+        </properties>
+      </component>
+      <component id="4c58" class="javax.swing.JButton" binding="btnClear">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <focusPainted value="false"/>
+          <horizontalTextPosition value="11"/>
+          <text value="Clear"/>
         </properties>
       </component>
     </children>
